# OwnVST3

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ownvst3.h  ownvst3_wrapper.h
sdk/: git source.txt
sdk/public.sdk/source/vst/hosting/: module_win32.cpp
src/: ownvst3.cpp  ownvst3_mac_helper.mm  ownvst3_test.cpp  ownvst3_wrapper.cpp
